# quantiles

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build.rs  codecov.yml  index.html  search-index.js
benches/: ckms.rs  insert.rs  selist.rs
ci/: installs.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ckms_u32.rs
in/: basics
quantiles/: index.html  sidebar-items.js
quantiles/ckms/: CKMS.t.html  index.html  sidebar-items.js  struct.CKMS.html
quantiles/greenwald_khanna/: Tuple.t.html  find_insert_pos.v.html  find_insert_pos_linear.v.html  fn.find_insert_pos.html  fn.find_insert_pos_linear.html  index.html  sidebar-items.js  struct.Stream.html  struct.Tuple.html
quantiles/misra_gries/: fn.misra_gries.html  index.html  misra_gries.v.html  sidebar-items.js
resources/: afl_crashes_20161215.txt
serde/: index.html  macro.forward_to_deserialize.html
serde/bytes/: index.html  struct.ByteBuf.html  struct.ByteBufVisitor.html  struct.Bytes.html
serde/de/: enum.Type.html  index.html  trait.Deserialize.html  trait.Deserializer.html  trait.EnumVisitor.html  trait.Error.html  trait.MapVisitor.html  trait.SeqVisitor.html  trait.VariantVisitor.html  trait.Visitor.html
serde/iter/: index.html  struct.LineColIterator.html
serde/ser/: index.html  trait.Error.html  trait.Serialize.html  trait.Serializer.html
src/: ckms.rs  ckms_types.in.rs  greenwald_khanna.rs  histogram.rs  lib.rs  main.rs  misra_gries.rs  store.rs
src/ckms/: entry.rs  mod.rs  store.rs
src/quantiles/: ckms.rs.html  greenwald_khanna.rs.html  lib.rs.html  misra_gries.rs.html
src/serde/: bytes.rs.html  iter.rs.html  lib.rs.html  (+2 more)
tests/: ckms.rs
(+119 files in other folders)
