[package]
name = "quantiles"
version = "0.5.0"
authors = ["Brian L. Troutwine <blt@postmates.com>"]

description = "a collection of approximate quantile algorithms"
repository = "https://github.com/postmates/quantiles"

readme = "README.md"
license = "MIT"

keywords = ["statistics", "histogram", "quantiles", "percentiles", "approximation"]

[profile.release]
lto = true

[dev-dependencies]
quickcheck = "0.4"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

