[package]
name = "quantiles"
version = "0.7.1"
authors = ["Brian L. Troutwine <blt@postmates.com>"]

description = "a collection of approximate quantile algorithms"
repository = "https://github.com/postmates/quantiles"

readme = "README.md"
license = "MIT"

keywords = ["statistics", "histogram", "quantiles", "percentiles", "approximation"]

[profile.release]
lto = true

[dev-dependencies]
quickcheck = "0.5"

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []

serde_support = ["serde", "serde_derive"]
